--- a/packages/styles/components/menu.css
+++ b/packages/styles/components/menu.css
@@ -64,7 +64,7 @@
 
 .sg-menu-dark .sg-menu-item-selected,
 .sg-menu-dark .sg-menu-item-selected:hover {
-  color: #fff;
+  color: var(--sg-color-white, #fff);
   background: var(--sg-color-primary);
 }
 
